<!--
  ~ Copyright (C) 2020 Adrian Miozga <AdrianMiozga@outlook.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name" translatable="false">GetFlow</string>
    <string name="work_icon">Work</string>
    <string name="break_icon">Break</string>
    <string name="do_not_disturb_summary">Enable do not disturb during work session</string>
    <string name="settings">Settings</string>
    <string name="do_not_disturb_title">Do Not Disturb</string>
    <string name="work_duration_title">Work duration</string>
    <string name="break_duration_title">Break duration</string>
    <string name="dialog_access_policy_not_granted">You need to grant Do Not Disturb access for this app</string>
    <string name="dialog_go_to_settings">Go to settings</string>
    <string name="cancel">Cancel</string>
    <string name="skip">Skip</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>
    <string name="work_time">Work time!</string>
    <string name="break_time">Break time!</string>
    <string name="break_time_left">Break time left: %s</string>
    <string name="work_time_left">Work time left: %s</string>
    <string name="statistics">Statistics</string>
    <string name="today">Today</string>
    <string name="total">Total</string>
    <string name="do_not_disturb_break_summary">Keep DND on breaks</string>
    <string name="overview">Overview</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="history">History</string>
    <string name="loading_chart">Loading…</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="days">Days</string>
    <string name="time">%dm</string>
    <string name="months">Months</string>
    <string name="press_on_timer_snackbar_message">Press on the timer to start or pause</string>
    <string name="long_press_on_timer_snackbar_message">Long press the timer to stop</string>
    <string name="swipe_timer_snackbar_message">Swipe the timer from right to left to skip it</string>
    <string name="enable_long_breaks_title">Enable long breaks</string>
    <string name="long_break_duration_title">Long break duration</string>
    <string name="disable_wifi_title">Disable Wi-Fi</string>
    <string name="disable_wifi_summary">Disables Wi-Fi during work session</string>
    <string name="app_lock">Block applications</string>
    <string name="application_icon">Application Icon</string>
    <string name="accessibility_service_description">To allow GetFlow to block other Android applications during work
        session enable this accessibility service.</string>
    <string name="app_lock_switch_description">Block applications when the work session is on</string>
    <string name="accessibility_not_enabled_dialog">To allow GetFlow to block other Android applications you need to
        enable accessibility service.</string>
    <string name="new_activity_name">New Activity Name</string>
    <string name="OK">OK</string>
    <string name="activity_name">Activity Name</string>
    <string name="delete_activity">Delete Activity</string>
    <string name="confirm">Confirm</string>
    <string name="delete_activity_message">This action cannot be undone.</string>
    <string name="cantDeleteDialog">You can not delete your last activity.</string>
    <string name="default_activity_name">Default</string>
    <string name="activity_with_that_name_exists">Activity with that name already exists</string>
    <string name="Confirmation">Confirmation</string>
    <string name="activity_already_running_dialog_message">You have timer already running.
        Changing activity will stop it.</string>
    <string name="automatically_start_new_activities">Automatically start activities</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="you_have_data_with_this_activity">All statistics associated with this activity will be deleted. This
        action cannot be undone.</string>
    <string name="automatically_start_activities_summary">Selecting activity will automatically
        start the timer</string>
    <string name="activities">Activities</string>
    <string name="activity_legend_percent_1" translatable="false">%.2f%%</string>
    <string name="activity_legend_percent_2" translatable="false">%.0f%%</string>
    <string name="others_text">Others (%.0f%%) consists of</string>
    <string name="others_activity_name">Others</string>
    <string name="day">Day</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="activity_pie_chart_no_data">No data for this period</string>
    <string name="scroll_pie_chart_automatically_summary">Scrolls activity chart in statistics to show Others section
        when changing time period</string>
    <string name="scroll_pie_chart_automatically_title">Scroll chart automatically</string>
    <string name="full_screen_mode_title">Full screen mode</string>
    <string name="weeks">Weeks</string>
    <string name="sessions_before_a_long_break_title">Sessions before a long break</string>
    <string name="select_activities_dialog_title">Select activities</string>
    <string name="select_activities_positive_button">OK</string>
    <string name="select_activities_negative_button">Cancel</string>
    <string name="more">More</string>
    <string name="never_show_neutral_button">Never Show</string>
    <string name="ignore_battery_optimization_title">Ignore Battery Optimization</string>
    <string name="ignore_battery_optimization_message">It is recommended to ignore battery optimization for this
        application. Not doing so might lead end timer notifications to arrive late or cancel them entirely.
        \n\nPressing confirm will show appropriate dialog.</string>
    <string name="about_menu_item">About</string>
    <string name="application_icon_content_description">Application Icon</string>
    <string name="view_source_code_at_github">View source code at GitHub</string>
    <string name="send_feedback">Send feedback</string>
    <string name="troubleshooting">Troubleshooting</string>
    <string name="application_getting_killed_message">If you experience problems with application getting killed
        even with battery optimization disabled, check out DontKillMyApp.com</string>
    <string name="application_getting_killed_title">Application Getting Killed</string>
    <string name="open_website">Open Website</string>
    <string name="about_version_number">Version %s</string>
    <string name="activity_settings_name">Activity Settings</string>
    <string name="about_activity_name">About</string>
    <string name="activities_name">Activities</string>
    <string name="tutorial">Tutorial</string>
    <string name="ignore_optimization_dialog">Ignore battery optimization dialog</string>

    <string-array name="history_spinner">
        <item name="days">@string/days</item>
        <item name="weeks">@string/weeks</item>
        <item name="months">@string/months</item>
    </string-array>

    <string-array name="activities_spinner">
        <item name="days">@string/today</item>
        <item name="weeks">@string/last_week</item>
        <item name="months">@string/last_month</item>
        <item name="total">@string/total</item>
    </string-array>
</resources>