<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        app:key="work_duration"
        app:title="@string/work_duration_title" />

    <EditTextPreference
        app:key="break_duration"
        app:title="@string/break_duration" />

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:key="do_not_disturb"
        app:summary="@string/do_not_disturb_summary"
        app:title="@string/do_not_disturb_title" />

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:isPreferenceVisible="false"
        app:key="do_not_disturb_break"
        app:title="@string/do_not_disturb_break_summary" />

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:key="keep_screen_on"
        app:title="Keep screen on" />

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:key="dark_mode"
        app:title="Dark mode" />
</PreferenceScreen>